@@ -1,3 +1,13 @@
+2007-03-22  David Harrison  <harrison@apple.com>
+
+        Reviewed by Geoff, Darin.
+
+        <rdar://problem/5077892> In RapidWeaver 3.5.1, a crash occurs when attempting to load Safari Bookmarks in iMedia Browser
+        
+        * platform/mac/ThreadCheck.mm:
+        (WebCore::_WebCoreThreadViolationCheck):
+        Change default on Tiger to NSLog rather than raise an exception.
+
 2007-03-22  Darin Adler  <darin@apple.com>
 
         Reviewed by Brady.
